<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/add_city_name_edt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_city_name_hint_str"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_longitude_edt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="12dp"
        android:digits="1234567890.-"
        android:hint="@string/longitude_hint_str"
        android:inputType="date"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_latitude_edt" />

    <EditText
        android:id="@+id/add_latitude_edt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:digits="1234567890.-"
        android:hint="@string/latitude_hint_str"
        android:inputType="date"
        android:maxLength="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_city_name_edt" />

    <Button
        android:id="@+id/cancel_add_city_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cancel_btn_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_longitude_edt" />

    <Button
        android:id="@+id/apply_add_city_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_btn_str"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_add_city_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_longitude_edt" />
</androidx.constraintlayout.widget.ConstraintLayout>