<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.activities.MainActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_main" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:text="@string/main_tv_str"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Button
                android:id="@+id/btn_select_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginTop="@dimen/quarter_main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_marginBottom="@dimen/quarter_main_margin"
                android:drawableLeft="@drawable/ic_baseline_location_city_24"
                android:text="@string/select_city_btn_str"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <Button
                android:id="@+id/btn_get_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginTop="@dimen/quarter_main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_marginBottom="@dimen/quarter_main_margin"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:text="@string/get_coordinates_btn_str"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_select_city" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_get_location" />

            <EditText
                android:id="@+id/edt_latitude"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/quarter_main_margin"
                android:digits="1234567890.-"
                android:hint="@string/latitude_hint_str"
                android:inputType="date"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <ImageButton
                android:id="@+id/btn_clear_latitude"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_clear_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/btn_clear_longitude"
                app:layout_constraintStart_toEndOf="@+id/edt_latitude"
                app:layout_constraintTop_toTopOf="@+id/edt_latitude"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_margin"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/edt_longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edt_latitude"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/edt_longitude"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/quarter_main_margin"
                android:digits="1234567890.-"
                android:hint="@string/longitude_hint_str"
                android:inputType="date"
                android:maxLength="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_latitude" />

            <ImageButton
                android:id="@+id/btn_clear_longitude"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_baseline_clear_24"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/edt_longitude"
                app:layout_constraintStart_toEndOf="@+id/edt_longitude"
                app:layout_constraintTop_toBottomOf="@+id/edt_latitude"
                tools:visibility="visible" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_longitude" />

            <Button
                android:id="@+id/btn_get_weather"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/main_margin"
                android:layout_marginTop="@dimen/quarter_main_margin"
                android:layout_marginRight="@dimen/main_margin"
                android:layout_marginBottom="@dimen/quarter_main_margin"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:text="@string/get_weather_btn_str"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>